--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+ul,
+li {
+  list-style: none;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: stretch;
+  min-height: 100vh;
+  background-color: #ebebeb;
+  padding: 40px;
+}
+@media only screen and (max-width: 768px) {
+  .App {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    min-height: 100vh;
+    background-color: #ebebeb;
+    padding: 10px;
+  }
+}
+button:not(:has(img)) {
+  padding: 10px 20px;
+  margin: 10px auto;
+  font-size: 17px;
+  border: 1px solid #1c87c9;
+  background: #1c87c9;
+  border-radius: 20px;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+button:not(:has(img)):hover,
+button:not(:has(img)):active {
+  background: #26a9e0;
+  border-color: #26a9e0;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:not(:has(img)):focus {
+  outline: none;
 }
